2023-07-27T08:10:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5678121464 # 1761
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-27
* notice: last 14d: unq all: 15 44
* notice: prev accum: outdated-unq outdated-all / unq all: 1404 4819 / 1440 4877
* notice: next accum: outdated-unq outdated-all / unq all: 1404 4819 / 1441 4878
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -8 -15 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-13 2023-07-27]

2023-07-26T16:09:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5671132684 # 1759
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-26
* notice: last 14d: unq all: 22 58
* notice: prev accum: outdated-unq outdated-all / unq all: 1403 4817 / 1440 4876
* notice: next accum: outdated-unq outdated-all / unq all: 1404 4819 / 1440 4877
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-07-12] / [2023-07-26]

2023-07-26T08:10:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5666282300 # 1758
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-26
* notice: last 14d: unq all: 22 58
* notice: prev accum: outdated-unq outdated-all / unq all: 1403 4817 / 1439 4875
* notice: next accum: outdated-unq outdated-all / unq all: 1403 4817 / 1440 4876
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-12 2023-07-26]

2023-07-26T00:43:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5663306851 # 1757