@@ -1,12 +1,7 @@
 {
-  "count": 44,
-  "uniques": 15,
+  "count": 37,
+  "uniques": 10,
   "clones": [
-    {
-      "timestamp": "2023-07-13T00:00:00Z",
-      "count": 8,
-      "uniques": 5
-    },
     {
       "timestamp": "2023-07-14T00:00:00Z",
       "count": 12,
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-07-27T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
