@@ -1,3 +1,12 @@
+2023-07-27T16:09:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5682896747 # 1762
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-27
+* notice: last 14d: unq all: 10 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 1404 4819 / 1441 4878
+* notice: next accum: outdated-unq outdated-all / unq all: 1417 4842 / 1441 4879
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2023-07-13] / [2023-07-27]
+
 2023-07-27T08:10:03Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5678121464 # 1761
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-27
